--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Settings Page</h1>
+    <button class="btn primary">
+        Logout
+    </button>
     <%-include('./partials/bottom.ejs')%>
 </body>
 </html>
