--- a/views/partials/bottom.ejs
+++ b/views/partials/bottom.ejs
@@ -191,9 +191,9 @@
             <p>Home</p>
         </a>
 
-        <a href="/settings">
-            <i class="fa-solid fa-sliders"></i>
-            <p>Settings</p>
+        <a href="/logout">
+            <i style="color: rgb(180, 5, 5);" class="fa-solid fa-arrow-right-from-bracket"></i>
+            <p>Logout</p>
         </a>
     </ul>
 </div>
