--- a/views/partials/bottom.ejs
+++ b/views/partials/bottom.ejs
@@ -2,6 +2,7 @@
     * {
         margin: 0;
         padding: 0;
+        transition: all .3s ease-in-out;
     }
 
     @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap');
@@ -51,10 +52,10 @@
     .create_div {
         position: fixed;
         bottom: 100px;
-        float: right;
-        width: 100%;
+        width: auto;
         display: flex;
         justify-content: right;
+        right: 0;
     }
 
     .create_div button {
